--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-aboutLibraries = "11.6.3"
+aboutLibraries = "12.0.0-a05"
 accompanist = "0.37.2"
 androidGradlePlugin = "8.9.1"
 androidxActivityCompose = "1.10.1"
@@ -23,7 +23,7 @@ androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0-beta01"
 androidxWork = "2.10.0"
 composeBom = "2025.02.00"
-firebaseBom = "33.11.0"
+firebaseBom = "33.12.0"
 firebaseCrashlyticsPlugin = "3.0.3"
 firebasePerfPlugin = "1.4.2"
 gmsPlugin = "4.4.2"
@@ -32,13 +32,13 @@ hiltExt = "1.2.0"
 kotlin = "2.1.20"
 kotlinxCoroutines = "1.10.1"
 kotlinxDatetime = "0.6.2"
-kotlinxSerializationJson = "1.8.0"
+kotlinxSerializationJson = "1.8.1"
 ksp = "2.1.20-1.0.32"
 lottie = "6.6.3"
 okhttp = "4.12.0"
 playAppUpdate = "2.1.0"
 protobuf = "4.30.1"
-protobufPlugin = "0.9.4"
+protobufPlugin = "0.9.5"
 retrofit = "2.11.0"
 room = "2.7.0-rc03"
 vico = "2.0.3"
