--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-aboutLibraries = "12.0.0-a05"
+aboutLibraries = "12.0.0-b02"
 accompanist = "0.37.2"
 androidGradlePlugin = "8.9.1"
 androidxActivityCompose = "1.10.1"
