--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,10 +30,10 @@ gmsPlugin = "4.4.2"
 hilt = "2.56.1"
 hiltExt = "1.2.0"
 kotlin = "2.1.20"
-kotlinxCoroutines = "1.10.1"
+kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.6.2"
 kotlinxSerializationJson = "1.8.1"
-ksp = "2.1.20-1.0.32"
+ksp = "2.1.20-2.0.0"
 lottie = "6.6.3"
 okhttp = "4.12.0"
 playAppUpdate = "2.1.0"
@@ -41,7 +41,7 @@ playReview = "2.0.2"
 protobuf = "4.30.1"
 protobufPlugin = "0.9.5"
 retrofit = "2.11.0"
-room = "2.7.0-rc03"
+room = "2.7.0"
 vico = "2.0.3"
 
 [libraries]
