--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ androidGradlePlugin = "8.9.1"
 androidxActivityCompose = "1.10.1"
 androidxAppCompat = "1.7.0"
 androidxBrowser = "1.8.0"
-androidxCore = "1.15.0"
+androidxCore = "1.16.0"
 androidxCoreSplashscreen = "1.2.0-beta01"
 androidxDataStore = "1.1.4"
 androidxGlance = "1.1.1"
@@ -20,7 +20,7 @@ androidxTestExt = "1.2.1"
 androidxTestRules = "1.6.1"
 androidxTestRunner = "1.6.2"
 androidxTestUiAutomator = "2.3.0"
-androidxTracing = "1.3.0-beta01"
+androidxTracing = "1.3.0-rc01"
 androidxWork = "2.10.0"
 composeBom = "2025.04.00"
 firebaseBom = "33.12.0"
@@ -34,11 +34,11 @@ kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.6.2"
 kotlinxSerializationJson = "1.8.1"
 ksp = "2.1.20-2.0.0"
-lottie = "6.6.3"
+lottie = "6.6.6"
 okhttp = "4.12.0"
 playAppUpdate = "2.1.0"
 playReview = "2.0.2"
-protobuf = "4.30.1"
+protobuf = "4.30.2"
 protobufPlugin = "0.9.5"
 retrofit = "2.11.0"
 room = "2.7.0"
