--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ androidxBrowser = "1.8.0"
 androidxComposeMaterial3 = "1.4.0-alpha13"
 androidxCore = "1.16.0"
 androidxCoreSplashscreen = "1.2.0-beta02"
-androidxDataStore = "1.1.5"
+androidxDataStore = "1.2.0-alpha01"
 androidxGlance = "1.1.1"
 androidxHiltNavigationCompose = "1.2.0"
 androidxLifecycle = "2.8.7"
