--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
-aboutLibraries = "12.1.0-rc04"
+aboutLibraries = "12.1.2"
 accompanist = "0.37.3"
-androidGradlePlugin = "8.9.2"
+androidGradlePlugin = "8.10.0"
 androidxActivityCompose = "1.10.1"
 androidxAppCompat = "1.7.0"
 androidxBrowser = "1.8.0"
-androidxComposeMaterial3 = "1.4.0-alpha13"
+androidxComposeMaterial3 = "1.4.0-alpha14"
 androidxCore = "1.16.0"
 androidxCoreSplashscreen = "1.2.0-beta02"
-androidxDataStore = "1.2.0-alpha01"
+androidxDataStore = "1.2.0-alpha02"
 androidxGlance = "1.1.1"
 androidxHiltNavigationCompose = "1.2.0"
-androidxLifecycle = "2.8.7"
+androidxLifecycle = "2.9.0"
 androidxMacroBenchmark = "1.3.4"
-androidxNavigation = "2.8.9"
+androidxNavigation = "2.9.0"
 androidxProfileinstaller = "1.4.1"
 androidxTestCore = "1.6.1"
 androidxTestEspresso = "3.6.1"
@@ -23,12 +23,12 @@ androidxTestRunner = "1.6.2"
 androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
 androidxWork = "2.10.1"
-composeBom = "2025.04.01"
+composeBom = "2025.05.00"
 firebaseBom = "33.13.0"
 firebaseCrashlyticsPlugin = "3.0.3"
 firebasePerfPlugin = "1.4.2"
 gmsPlugin = "4.4.2"
-haze = "1.6.0-beta01"
+haze = "1.6.0-rc02"
 hilt = "2.56.2"
 hiltExt = "1.2.0"
 kotlin = "2.1.20"
