--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,6 @@ androidxCore = "1.16.0"
 androidxCoreSplashscreen = "1.2.0-beta02"
 androidxDataStore = "1.2.0-alpha02"
 androidxGlance = "1.1.1"
-androidxHiltNavigationCompose = "1.2.0"
 androidxLifecycle = "2.9.0"
 androidxMacroBenchmark = "1.3.4"
 androidxNavigation = "2.9.0"
@@ -31,7 +30,7 @@ firebasePerfPlugin = "1.4.2"
 gmsPlugin = "4.4.2"
 haze = "1.6.2"
 hilt = "2.56.2"
-hiltExt = "1.2.0"
+hiltExt = "1.3.0-alpha01"
 kotlin = "2.1.21"
 kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.6.2"
@@ -41,7 +40,7 @@ lottie = "6.6.6"
 okhttp = "4.12.0"
 playAppUpdate = "2.1.0"
 playReview = "2.0.2"
-protobuf = "4.30.2"
+protobuf = "4.31.0"
 protobufPlugin = "0.9.5"
 retrofit = "3.0.0"
 room = "2.7.1"
@@ -73,7 +72,7 @@ androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscree
 androidx-dataStore = { group = "androidx.datastore", name = "datastore", version.ref = "androidxDataStore" }
 androidx-glance-appwidget = { group = "androidx.glance", name = "glance-appwidget", version.ref = "androidxGlance" }
 androidx-glance-material3 = { group = "androidx.glance", name = "glance-material3", version.ref = "androidxGlance" }
-androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
+androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltExt" }
 androidx-lifecycle-runtimeCompose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
 androidx-lifecycle-viewModelCompose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
