--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,7 +44,7 @@ protobuf = "4.31.1"
 protobufPlugin = "0.9.5"
 retrofit = "3.0.0"
 room = "2.7.1"
-vico = "2.1.3"
+vico = "2.2.0-alpha.1"
 zip4j = "2.11.5"
 
 [libraries]
