--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
-aboutLibraries = "12.2.3"
+aboutLibraries = "12.2.4"
 accompanist = "0.37.3"
 androidGradlePlugin = "8.11.0"
 androidxActivityCompose = "1.10.1"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.8.0"
-androidxComposeMaterial3 = "1.4.0-alpha16"
-androidxComposeMaterial3Adaptive = "1.2.0-alpha07"
+androidxComposeMaterial3 = "1.4.0-alpha17"
+androidxComposeMaterial3Adaptive = "1.2.0-alpha08"
 androidxCore = "1.16.0"
-androidxCoreSplashscreen = "1.2.0-beta02"
+androidxCoreSplashscreen = "1.2.0-rc01"
 androidxDataStore = "1.2.0-alpha02"
 androidxGlance = "1.1.1"
 androidxLifecycle = "2.9.1"
 androidxMacroBenchmark = "1.3.4"
-androidxNavigation = "2.9.0"
+androidxNavigation = "2.9.1"
 androidxProfileinstaller = "1.4.1"
 androidxTestCore = "1.6.1"
 androidxTestEspresso = "3.6.1"
@@ -24,20 +24,20 @@ androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
 androidxWork = "2.10.2"
 composeBom = "2025.06.01"
-firebaseBom = "33.15.0"
+firebaseBom = "33.16.0"
 firebaseCrashlyticsPlugin = "3.0.4"
 firebasePerfPlugin = "1.4.2"
-gmsPlugin = "4.4.2"
-haze = "1.6.4"
+gmsPlugin = "4.4.3"
+haze = "1.6.6"
 hilt = "2.56.2"
 hiltExt = "1.3.0-alpha01"
 kotlin = "2.2.0"
 kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.7.0"
-kotlinxSerializationJson = "1.8.1"
+kotlinxSerializationJson = "1.9.0"
 ksp = "2.2.0-2.0.2"
 lottie = "6.6.7"
-okhttp = "4.12.0"
+okhttp = "5.0.0"
 playAppUpdate = "2.1.0"
 playReview = "2.0.2"
 protobuf = "4.31.1"
