--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,8 @@ androidGradlePlugin = "8.12.0"
 androidxActivityCompose = "1.10.1"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.9.0"
+androidxComposeMaterial3 = "1.5.0-alpha02"
+androidxComposeMaterial3Adaptive = "1.2.0-alpha11"
 androidxCoreSplashscreen = "1.2.0-rc01"
 androidxDataStore = "1.2.0-alpha02"
 androidxGlance = "1.1.1"
@@ -20,19 +22,19 @@ androidxTestRunner = "1.7.0"
 androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
 androidxWork = "2.10.3"
-composeBom = "2025.07.01"
-firebaseBom = "34.0.0"
-firebaseCrashlyticsPlugin = "3.0.5"
-firebasePerfPlugin = "2.0.0"
+composeBom = "2025.08.00"
+firebaseBom = "34.1.0"
+firebaseCrashlyticsPlugin = "3.0.6"
+firebasePerfPlugin = "2.0.1"
 gmsPlugin = "4.4.3"
-haze = "1.6.9"
+haze = "1.6.10"
 hilt = "2.57"
-hiltExt = "1.3.0-alpha02"
-kotlin = "2.2.0"
+hiltExt = "1.3.0-beta01"
+kotlin = "2.2.10"
 kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.7.1"
 kotlinxSerializationJson = "1.9.0"
-ksp = "2.2.0-2.0.2"
+ksp = "2.2.10-2.0.2"
 ktor = "3.2.3"
 lottie = "6.6.7"
 playAppUpdate = "2.1.0"
@@ -51,11 +53,11 @@ androidx-activity-compose = { group = "androidx.activity", name = "activity-comp
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppCompat" }
 androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "androidxMacroBenchmark" }
 androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "androidxBrowser" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom-alpha", version.ref = "composeBom" }
-androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-compose-material3-adaptive = { group = "androidx.compose.material3.adaptive", name = "adaptive" }
-androidx-compose-material3-adaptive-navigation = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation" }
-androidx-compose-material3-adaptive-navigation-suite = { group = "androidx.compose.material3", name = "material3-adaptive-navigation-suite" }
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "androidxComposeMaterial3" }
+androidx-compose-material3-adaptive = { group = "androidx.compose.material3.adaptive", name = "adaptive", version.ref = "androidxComposeMaterial3Adaptive" }
+androidx-compose-material3-adaptive-navigation = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation", version.ref = "androidxComposeMaterial3Adaptive" }
+androidx-compose-material3-adaptive-navigation-suite = { group = "androidx.compose.material3", name = "material3-adaptive-navigation-suite", version.ref = "androidxComposeMaterial3" }
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 androidx-compose-ui-test = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-ui-testManifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
