--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,17 +2,17 @@
 aboutLibraries = "12.2.4"
 accompanist = "0.37.3"
 androidGradlePlugin = "8.13.0"
-androidxActivityCompose = "1.10.1"
+androidxActivityCompose = "1.11.0"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.9.0"
-androidxComposeMaterial3 = "1.5.0-alpha03"
-androidxComposeMaterial3Adaptive = "1.2.0-beta01"
+androidxComposeMaterial3 = "1.5.0-alpha04"
+androidxComposeMaterial3Adaptive = "1.2.0-beta02"
 androidxCoreSplashscreen = "1.2.0-rc01"
 androidxDataStore = "1.2.0-alpha02"
 androidxGlance = "1.1.1"
 androidxLifecycle = "2.9.3"
-androidxMacroBenchmark = "1.4.0"
-androidxNavigation = "2.9.3"
+androidxMacroBenchmark = "1.4.1"
+androidxNavigation = "2.9.4"
 androidxProfileinstaller = "1.4.1"
 androidxTestCore = "1.7.0"
 androidxTestEspresso = "3.7.0"
@@ -21,15 +21,15 @@ androidxTestRules = "1.7.0"
 androidxTestRunner = "1.7.0"
 androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
-androidxWork = "2.10.3"
-composeBom = "2025.08.01"
+androidxWork = "2.10.4"
+composeBom = "2025.09.00"
 firebaseBom = "34.2.0"
 firebaseCrashlyticsPlugin = "3.0.6"
 firebasePerfPlugin = "2.0.1"
 gmsPlugin = "4.4.3"
 haze = "1.6.10"
 hilt = "2.57.1"
-hiltExt = "1.3.0-rc01"
+hiltExt = "1.3.0"
 kotlin = "2.2.10"
 kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.7.1"
@@ -42,7 +42,7 @@ playAppUpdate = "2.1.0"
 playReview = "2.0.2"
 protobuf = "4.32.0"
 protobufPlugin = "0.9.5"
-room = "2.7.2"
+room = "2.8.0"
 vico = "2.2.0-alpha.1"
 zip4j = "2.11.5"
 
