--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ androidxComposeMaterial3Adaptive = "1.2.0-beta02"
 androidxCoreSplashscreen = "1.2.0-rc01"
 androidxDataStore = "1.2.0-alpha02"
 androidxGlance = "1.1.1"
-androidxLifecycle = "2.9.3"
+androidxLifecycle = "2.9.4"
 androidxMacroBenchmark = "1.4.1"
 androidxNavigation = "2.9.4"
 androidxProfileinstaller = "1.4.1"
@@ -23,7 +23,7 @@ androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
 androidxWork = "2.10.4"
 composeBom = "2025.09.00"
-firebaseBom = "34.2.0"
+firebaseBom = "34.3.0"
 firebaseCrashlyticsPlugin = "3.0.6"
 firebasePerfPlugin = "2.0.1"
 gmsPlugin = "4.4.3"
@@ -37,13 +37,13 @@ kotlinxSerializationJson = "1.9.0"
 ksp = "2.2.20-2.0.3"
 ktor = "3.3.0"
 leakcanaryAndroid = "2.14"
-lottie = "6.6.7"
+lottie = "6.6.9"
 playAppUpdate = "2.1.0"
 playReview = "2.0.2"
 protobuf = "4.32.1"
 protobufPlugin = "0.9.5"
 room = "2.8.0"
-vico = "2.2.0-alpha.1"
+vico = "2.2.0"
 zip4j = "2.11.5"
 
 [libraries]
