--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,8 +5,8 @@ androidGradlePlugin = "8.13.0"
 androidxActivityCompose = "1.11.0"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.9.0"
-androidxComposeMaterial3 = "1.5.0-alpha04"
-androidxComposeMaterial3Adaptive = "1.2.0-beta03"
+androidxComposeMaterial3 = "1.5.0-alpha06"
+androidxComposeMaterial3Adaptive = "1.2.0-rc01"
 androidxCoreSplashscreen = "1.2.0-rc01"
 androidxDataStore = "1.2.0-alpha02"
 androidxGlance = "1.1.1"
@@ -22,7 +22,7 @@ androidxTestRunner = "1.7.0"
 androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
 androidxWork = "2.10.5"
-composeBom = "2025.09.01"
+composeBom = "2025.10.00"
 firebaseBom = "34.3.0"
 firebaseCrashlyticsPlugin = "3.0.6"
 firebasePerfPlugin = "2.0.1"
@@ -34,7 +34,7 @@ kotlin = "2.2.20"
 kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.7.1"
 kotlinxSerializationJson = "1.9.0"
-ksp = "2.2.20-2.0.3"
+ksp = "2.2.20-2.0.4"
 ktor = "3.3.0"
 leakcanaryAndroid = "2.14"
 lottie = "6.6.10"
@@ -42,8 +42,8 @@ playAppUpdate = "2.1.0"
 playReview = "2.0.2"
 protobuf = "4.32.1"
 protobufPlugin = "0.9.5"
-room = "2.8.1"
-vico = "2.2.0"
+room = "2.8.2"
+vico = "2.2.1"
 zip4j = "2.11.5"
 
 [libraries]
