--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-aboutLibraries = "12.2.4"
+aboutLibraries = "13.0.0"
 accompanist = "0.37.3"
 androidGradlePlugin = "8.13.0"
 androidxActivityCompose = "1.11.0"
@@ -23,10 +23,10 @@ androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
 androidxWork = "2.10.5"
 composeBom = "2025.10.00"
-firebaseBom = "34.3.0"
+firebaseBom = "34.4.0"
 firebaseCrashlyticsPlugin = "3.0.6"
 firebasePerfPlugin = "2.0.1"
-gmsPlugin = "4.4.3"
+gmsPlugin = "4.4.4"
 haze = "1.6.10"
 hilt = "2.57.2"
 hiltExt = "1.3.0"
@@ -35,7 +35,7 @@ kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.7.1"
 kotlinxSerializationJson = "1.9.0"
 ksp = "2.2.20-2.0.4"
-ktor = "3.3.0"
+ktor = "3.3.1"
 leakcanaryAndroid = "2.14"
 lottie = "6.6.10"
 playAppUpdate = "2.1.0"
@@ -131,7 +131,7 @@ ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devto
 room-gradlePlugin = { group = "androidx.room", name = "room-gradle-plugin", version.ref = "room" }
 
 [plugins]
-aboutlibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutLibraries" }
+aboutlibraries = { id = "com.mikepenz.aboutlibraries.plugin.android", version.ref = "aboutLibraries" }
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 android-test = { id = "com.android.test", version.ref = "androidGradlePlugin" }
