--- a/gradle.properties
+++ b/gradle.properties
@@ -31,3 +31,5 @@ kotlin.code.style=official
 # https://developer.android.com/build/releases/gradle-plugin#default-changes
 android.defaults.buildfeatures.resvalues=false
 android.defaults.buildfeatures.shaders=false
+
+android.r8.optimizedResourceShrinking=true
