--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,13 +37,13 @@ kotlinxSerializationJson = "1.9.0"
 ksp = "2.3.0"
 ktor = "3.3.1"
 leakcanaryAndroid = "2.14"
-lottie = "6.6.10"
+lottie = "6.7.0"
 playAppUpdate = "2.1.0"
 playReview = "2.0.2"
 protobuf = "4.33.0"
 protobufPlugin = "0.9.5"
 room = "2.8.3"
-vico = "2.2.1"
+vico = "2.3.0-alpha.2"
 zip4j = "2.11.5"
 
 [libraries]
