--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,13 +5,13 @@ androidGradlePlugin = "8.13.0"
 androidxActivityCompose = "1.11.0"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.9.0"
-androidxComposeMaterial3 = "1.5.0-alpha07"
-androidxCoreSplashscreen = "1.2.0-rc01"
-androidxDataStore = "1.2.0-beta01"
+androidxComposeMaterial3 = "1.5.0-alpha08"
+androidxCoreSplashscreen = "1.2.0"
+androidxDataStore = "1.2.0-rc01"
 androidxGlance = "1.1.1"
 androidxLifecycle = "2.9.4"
 androidxMacroBenchmark = "1.4.1"
-androidxNavigation = "2.9.5"
+androidxNavigation = "2.9.6"
 androidxProfileinstaller = "1.4.1"
 androidxTestCore = "1.7.0"
 androidxTestEspresso = "3.7.0"
@@ -21,7 +21,7 @@ androidxTestRunner = "1.7.0"
 androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
 androidxWork = "2.11.0"
-composeBom = "2025.10.01"
+composeBom = "2025.11.00"
 firebaseBom = "34.5.0"
 firebaseCrashlyticsPlugin = "3.0.6"
 firebasePerfPlugin = "2.0.2"
@@ -34,7 +34,7 @@ kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.7.1"
 kotlinxSerializationJson = "1.9.0"
 ksp = "2.3.1"
-ktor = "3.3.1"
+ktor = "3.3.2"
 leakcanaryAndroid = "2.14"
 lottie = "6.7.1"
 playAppUpdate = "2.1.0"
