--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,14 +2,14 @@
 aboutLibraries = "13.1.0"
 accompanist = "0.37.3"
 androidGradlePlugin = "8.13.1"
-androidxActivityCompose = "1.11.0"
+androidxActivityCompose = "1.12.0"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.9.0"
-androidxComposeMaterial3 = "1.5.0-alpha08"
+androidxComposeMaterial3 = "1.5.0-alpha09"
 androidxCoreSplashscreen = "1.2.0"
-androidxDataStore = "1.2.0-rc01"
+androidxDataStore = "1.2.0"
 androidxGlance = "1.1.1"
-androidxLifecycle = "2.9.4"
+androidxLifecycle = "2.10.0"
 androidxMacroBenchmark = "1.4.1"
 androidxNavigation = "2.9.6"
 androidxProfileinstaller = "1.4.1"
@@ -21,7 +21,7 @@ androidxTestRunner = "1.7.0"
 androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
 androidxWork = "2.11.0"
-composeBom = "2025.11.00"
+composeBom = "2025.11.01"
 firebaseBom = "34.6.0"
 firebaseCrashlyticsPlugin = "3.0.6"
 firebasePerfPlugin = "2.0.2"
@@ -41,7 +41,7 @@ playAppUpdate = "2.1.0"
 playReview = "2.0.2"
 protobuf = "4.33.1"
 protobufPlugin = "0.9.5"
-room = "2.8.3"
+room = "2.8.4"
 vico = "2.2.1"
 zip4j = "2.11.5"
 
