--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,13 +2,13 @@
 aboutLibraries = "13.1.0"
 accompanist = "0.37.3"
 androidGradlePlugin = "8.13.1"
-androidxActivityCompose = "1.12.0"
+androidxActivityCompose = "1.12.1"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.9.0"
-androidxComposeMaterial3 = "1.5.0-alpha09"
+androidxComposeMaterial3 = "1.5.0-alpha10"
 androidxCoreSplashscreen = "1.2.0"
 androidxDataStore = "1.2.0"
-androidxGlance = "1.1.1"
+androidxGlance = "1.2.0-rc01"
 androidxLifecycle = "2.10.0"
 androidxMacroBenchmark = "1.4.1"
 androidxNavigation = "2.9.6"
@@ -21,7 +21,7 @@ androidxTestRunner = "1.7.0"
 androidxTestUiAutomator = "2.3.0"
 androidxTracing = "1.3.0"
 androidxWork = "2.11.0"
-composeBom = "2025.11.01"
+composeBom = "2025.12.00"
 firebaseBom = "34.6.0"
 firebaseCrashlyticsPlugin = "3.0.6"
 firebasePerfPlugin = "2.0.2"
