Fix Gradle configuration
Set `android.newDsl=false` and fix system tray notifier.

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,4 +32,4 @@ kotlin.code.style=official
 android.defaults.buildfeatures.resvalues=false
 android.defaults.buildfeatures.shaders=false
 
-android.r8.optimizedResourceShrinking=true
+android.newDsl=false
