--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ androidxDataStore = "1.2.0"
 androidxGlance = "1.2.0-rc01"
 androidxLifecycle = "2.10.0"
 androidxMacroBenchmark = "1.5.0-alpha02"
-androidxNavigation3 = "1.1.0-alpha03"
+androidxNavigation3 = "1.0.0"
 androidxProfileinstaller = "1.4.1"
 androidxTestCore = "1.7.0"
 androidxTestEspresso = "3.7.0"
